--- a/settings_page.html
+++ b/settings_page.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
     </head>
 
-    <body>
+    <body onload="initVars()">
 
         <h1 style="text-align: center;">SETTINGS</h1>
         <table>
