--- a/game_page.html
+++ b/game_page.html
@@ -8,10 +8,10 @@
 
 	<body onload="init()">
 		
-		<audio controls loop>
+		<!--<audio controls loop>
 			<source src="music.mp3" type="audio/mpeg">
 			Your browser does not support the audio tag.
-		</audio> 
+		</audio>-->
 		<p class="tockeC1">Points: <span id="tocke"></span></p>
 		<p class="tockeC2">Record: <span id="rekord"></span></p>
 		<table id="leaderboard">
