--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<input type="text" id="uname" name="uname" placeholder="Janez">
 			</fieldset>
 		</form>
+		<img src="one_player.png" id="playerNumImg" width="100" height="100">
 		<img src="settings.png" id="settingsImg" width="100" height="100">
         <img src="start.png" id="startImg" width="100" height="100">
 		<script src="index_script.js"></script>
