--- a/settings_page.html
+++ b/settings_page.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <title>Space Invaders Travnik</title>
         <link rel=stylesheet href="style.css">
@@ -8,7 +7,6 @@
     </head>
 
     <body onload="initVars()">
-
         <h1 style="text-align: center;">SETTINGS</h1>
         <table>
             <tr>
@@ -28,14 +26,33 @@
             <tr>
                 <th>Shoot: </th>
                 <td>
-                    <span id="shoot"> </span>
+                    <span id="shoot">s</span>
                     <img src="change_keybind.png" class="changeKeybind" id="changeShoot">
+                </td>
+            </tr>
+            <tr>
+                <th>Move LEFT Player 2: </th>
+                <td>
+                    <span id="moveLeft1">j</span>
+                    <img src="change_keybind.png" class="changeKeybind" id="changeLeft1">
+                </td>
+            </tr>
+            <tr>
+                <th>Move RIGHT Player 2: </th>
+                <td>
+                    <span id="moveRight1">l</span>
+                    <img src="change_keybind.png" class="changeKeybind" id="changeRight1">
+                </td>
+            </tr>
+            <tr>
+                <th>Shoot Player 2: </th>
+                <td>
+                    <span id="shoot1">k</span>
+                    <img src="change_keybind.png" class="changeKeybind" id="changeShoot1">
                 </td>
             </tr>
         </table>
         <img src="back_button.png" id="backImg" width="100" height="100">
         <script src="settings_script.js"></script>
-
     </body>
-
 </html>
