dodani enemy metki

--- a/game_page.html
+++ b/game_page.html
@@ -7,13 +7,9 @@
 	</head>
 
 	<body onload="init()">
-		
-		<!--<audio controls loop>
-			<source src="music.mp3" type="audio/mpeg">
-			Your browser does not support the audio tag.
-		</audio>-->
-		<p class="tockeC1">Points: <span id="tocke"></span></p>
-		<p class="tockeC2">Record: <span id="rekord"></span></p>
+		<p id="tockeID1">Points: <span id="tocke"></span></p>
+		<p id="tockeID2">Record: <span id="rekord"></span></p>
+		<p id="zivljenjaID">Lives: <span id="zivljenja"></span></p>
 		<table id="leaderboard">
 			<caption style="color: red">LEADERBOARD</caption>
 			<tr>
@@ -22,6 +18,5 @@
 			</tr>
 		</table>
 		<script src="game.js"></script>
-
 	</body>
 </html>
