dodal localstorage, preverjanje vnosa

--- a/game_page.html
+++ b/game_page.html
@@ -11,10 +11,10 @@
 		<p id="tockeID2">Record: <span id="rekord"></span></p>
 		<p id="zivljenjaID">Lives: <span id="zivljenja"></span></p>
 		<table id="leaderboard">
-			<caption style="color: red">LEADERBOARD</caption>
+			<caption style="color: red">LIST OF GAMES</caption>
 			<tr>
-				<td class="leaderboardSpacing">NAME</th>
-				<td class="leaderboardSpacing">SCORE</th>
+				<th class="leaderboardSpacing">NAME</th>
+				<th class="leaderboardSpacing">SCORE</th>
 			</tr>
 		</table>
 		<script src="game.js"></script>
