--- a/settings_page.html
+++ b/settings_page.html
@@ -13,46 +13,46 @@
                 <th>Move LEFT: </th>
                 <td>
                     <span id="moveLeft">a</span>
-                    <img src="change_keybind.png" class="changeKeybind" id="changeLeft">
+                    <img src="change_keybind.png" class="changeKeybind" id="changeLeft" alt="Premik levo">
                 </td>
             </tr>
             <tr>
                 <th>Move RIGHT: </th>
                 <td>
                     <span id="moveRight">d</span>
-                    <img src="change_keybind.png" class="changeKeybind" id="changeRight">
+                    <img src="change_keybind.png" class="changeKeybind" id="changeRight" alt="Premik desno">
                 </td>
             </tr>
             <tr>
                 <th>Shoot: </th>
                 <td>
                     <span id="shoot">s</span>
-                    <img src="change_keybind.png" class="changeKeybind" id="changeShoot">
+                    <img src="change_keybind.png" class="changeKeybind" id="changeShoot" alt="Streljaj">
                 </td>
             </tr>
             <tr>
                 <th>Move LEFT Player 2: </th>
                 <td>
                     <span id="moveLeft1">j</span>
-                    <img src="change_keybind.png" class="changeKeybind" id="changeLeft1">
+                    <img src="change_keybind.png" class="changeKeybind" id="changeLeft1" alt="Premik levo igr. 2">
                 </td>
             </tr>
             <tr>
                 <th>Move RIGHT Player 2: </th>
                 <td>
                     <span id="moveRight1">l</span>
-                    <img src="change_keybind.png" class="changeKeybind" id="changeRight1">
+                    <img src="change_keybind.png" class="changeKeybind" id="changeRight1" alt="Premik desno igr. 2">
                 </td>
             </tr>
             <tr>
                 <th>Shoot Player 2: </th>
                 <td>
                     <span id="shoot1">k</span>
-                    <img src="change_keybind.png" class="changeKeybind" id="changeShoot1">
+                    <img src="change_keybind.png" class="changeKeybind" id="changeShoot1" alt="Streljaj igr. 2">
                 </td>
             </tr>
         </table>
-        <img src="back_button.png" id="backImg" width="100" height="100">
+        <img src="back_button.png" id="backImg" width="100" height="100" alt="Nazaj">
         <script src="settings_script.js"></script>
     </body>
 </html>
