--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 				<input type="text" id="uname" name="uname" placeholder="Janez">
 			</fieldset>
 		</form>
-		<img src="one_player.png" id="playerNumImg" width="100" height="100">
-		<img src="settings.png" id="settingsImg" width="100" height="100">
-        <img src="start.png" id="startImg" width="100" height="100">
+		<img src="one_player.png" id="playerNumImg" width="100" height="100" alt="Izbira št. igralcev">
+		<img src="settings.png" id="settingsImg" width="100" height="100" alt="Nastavitve">
+        <img src="start.png" id="startImg" width="100" height="100" alt="Začni igro">
 		<script src="index_script.js"></script>
 
 	</body>
